// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Button Snapshot added optional style inline prop 1`] = `
<div
  className="jsx-178200624"
>
  <button
    className="jsx-178200624 default"
    onClick={[Function]}
    style={
      Object {
        "color": "#ccc",
        "marginTop": "20px",
      }
    }
    type="button"
  >
    Button Test
  </button>
</div>
`;

exports[`Component Button Snapshot using default values 1`] = `
<div
  className="jsx-178200624"
>
  <button
    className="jsx-178200624 default"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    Button Test
  </button>
</div>
`;

exports[`Component Button Snapshot using other type button and style outline 1`] = `
<div
  className="jsx-3514065733"
>
  <button
    className="jsx-3514065733 outline"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    Button Test
  </button>
</div>
`;
